--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,14 +1,16 @@
+*{
+  background-color: rgb(36, 34, 34);
+  font-weight: 500;
+  color: rgb(192, 192, 192);
+  box-sizing: border-box;
+  border: none;
+}
 #root {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-*{
-  background-color: rgb(36, 34, 34);
-  font-weight: 500;
-  color: rgb(192, 192, 192);
-}
 input{
   background-color: #f9f9f9;
   color: black
